--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "vite"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
