--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "marked": "^9.1.2",
     "vue": "^3.3.4",
+    "vue-markdown": "^2.1.3",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
